--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.25",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -42,6 +40,9 @@
     ]
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.235",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "autoprefixer": "^10.4.14",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
