added prod build and dev build

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack --config webpack.config.js",
-    "watch": "webpack -w --config webpack.config.js",
+    "build": "webpack  --config webpack.prod.js",
+    "watch": "webpack -w --config  webpack.dev.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -52,6 +52,7 @@
     "tailwindcss": "^3.3.2",
     "ts-loader": "^9.4.2",
     "webpack": "^5.81.0",
-    "webpack-cli": "^5.0.2"
+    "webpack-cli": "^5.0.2",
+    "webpack-merge": "^5.8.0"
   }
 }
