--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.25",
+    "axios": "^0.26.0",
+    "ethers": "^5.7.2",
+    "ethjs": "^0.4.0",
+    "metamask-extension-provider": "^3.0.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.9.0",
+    "web3-token": "^1.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
